force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/DESKSCMT__Desk_Interaction_Migration__c.object-meta.xml
<CustomObject>
    <label>Desk Interaction Migration</label>
    <nameField>
        <displayFormat>DCM-{0000000000}</displayFormat>
        <label>Desk Interaction Migration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Desk Interaction Migrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>