force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__agent_answer_count__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__agent_answer_count__c</fullName>
    <label>Agent Answer Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>