force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__Answers_Disallowed_At__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Answers_Disallowed_At__c</fullName>
    <label>Answers Disallowed At</label>
    <type>DateTime</type>
</CustomField>