force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__are_answers_disallowed__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__are_answers_disallowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are Answers Disallowed</label>
    <type>Checkbox</type>
</CustomField>