force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__bcc__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__bcc__c</fullName>
    <label>Bcc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>