force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__Body__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Body__c</fullName>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>