force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__cc__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__cc__c</fullName>
    <label>cc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>