force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__Direction__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Direction__c</fullName>
    <label>Direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>