force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__EmailMessageId__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__EmailMessageId__c</fullName>
    <label>EmailMessageId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>