force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__Erased_At__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Erased_At__c</fullName>
    <label>Erased At</label>
    <type>DateTime</type>
</CustomField>