force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__Error__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Error__c</fullName>
    <label>Error</label>
    <type>TextArea</type>
</CustomField>