force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__Facebook_Id__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Facebook_Id__c</fullName>
    <label>Facebook Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>