force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__from__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__from__c</fullName>
    <label>from</label>
    <length>255</length>
    <type>Text</type>
</CustomField>