force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__From_Facebook_Name__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__From_Facebook_Name__c</fullName>
    <label>From Facebook Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>