force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__hidden__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>