force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__InteractionId__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__InteractionId__c</fullName>
    <label>InteractionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>