force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__Liked__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Liked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liked</label>
    <type>Checkbox</type>
</CustomField>