force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__ParentId__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__ParentId__c</fullName>
    <label>ParentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>