force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__public_url__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__public_url__c</fullName>
    <label>Public Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>