force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__Salesforce_Intermediate_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Salesforce_Intermediate_Case_Id__c</fullName>
    <label>Salesforce Intermediate Case Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>