force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__Sent_At__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Sent_At__c</fullName>
    <label>Sent At</label>
    <type>DateTime</type>
</CustomField>