force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__status__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>