force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__subject__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__subject__c</fullName>
    <label>Subject</label>
    <type>TextArea</type>
</CustomField>