force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__to__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__to__c</fullName>
    <label>to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>