force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__twitter_status_id__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__twitter_status_id__c</fullName>
    <label>Twitter Status Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>