force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__Updated_At__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Updated_At__c</fullName>
    <label>Updated At</label>
    <type>DateTime</type>
</CustomField>