force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/fields/DESKSCMT__UserId__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__UserId__c</fullName>
    <label>UserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>