force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/listViews/DESKSCMT__All.listView-meta.xml
<ListView>
    <fullName>DESKSCMT__All</fullName>
    <columns>NAME</columns>
    <columns>DESKSCMT__Desk_Interaction_Id__c</columns>
    <columns>DESKSCMT__Type__c</columns>
    <columns>DESKSCMT__Interaction_Type__c</columns>
    <columns>DESKSCMT__subject__c</columns>
    <columns>DESKSCMT__EmailMessageId__c</columns>
    <columns>DESKSCMT__Error__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DESKSCMT__Interaction_Type__c</field>
        <operation>notEqual</operation>
        <value>Note</value>
    </filters>
    <label>All Interactions</label>
</ListView>