force-app/main/default/objects/DESKSCMT__Desk_Interaction_Migration__c/listViews/DESKSCMT__Failed_Notes.listView-meta.xml
<ListView>
    <fullName>DESKSCMT__Failed_Notes</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>DESKSCMT__Interaction_Type__c</columns>
    <columns>DESKSCMT__Body__c</columns>
    <columns>DESKSCMT__Error__c</columns>
    <columns>DESKSCMT__Desk_Case_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DESKSCMT__Error__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>DESKSCMT__Interaction_Type__c</field>
        <operation>equals</operation>
        <value>Note</value>
    </filters>
    <label>Failed Notes</label>
</ListView>